--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "nodemailer": "^4.4.1",
     "request": "^2.83.0",
+    "steem": "^0.6.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
