--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "nodemailer": "^4.4.1",
     "request": "^2.83.0",
     "steem": "^0.6.7",
