--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:watch": "cross-env NODE_ENV=production webpack --watch"
   },
   "dependencies": {
     "colors": "^1.1.2",
@@ -21,7 +22,9 @@
     "twig": "^1.10.5",
     "utopian-api": "^0.3.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "highlight.js": "^9.12.0",
+    "marked": "^0.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -38,6 +41,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.8",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -50,7 +54,10 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "node-notifier": "^5.2.1",
+    "offline-plugin": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -64,6 +71,7 @@
     "vue-loader": "^13.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^2.3.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.2",
     "webpack-dev-server": "^2.11.0",
