--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build:watch": "cross-env NODE_ENV=production webpack --watch"
   },
   "dependencies": {
+    "@liqueflies/vuex-async-module": "0.0.5",
+    "axios": "^0.17.1",
     "colors": "^1.1.2",
     "command-line-args": "^4.0.7",
+    "highlight.js": "^9.12.0",
+    "marked": "^0.3.6",
     "moment": "^2.20.1",
     "nodemailer": "^4.4.1",
     "request": "^2.83.0",
@@ -23,8 +27,7 @@
     "utopian-api": "^0.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "highlight.js": "^9.12.0",
-    "marked": "^0.3.6"
+    "vuex-action": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -41,21 +44,25 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.8",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-base": "^11.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "markdown-loader": "^2.0.2",
     "node-notifier": "^5.2.1",
     "offline-plugin": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
