--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build:watch": "cross-env NODE_ENV=production webpack --watch"
   },
   "dependencies": {
-    "@liqueflies/vuex-async-module": "0.0.5",
     "axios": "^0.17.1",
     "colors": "^1.1.2",
     "command-line-args": "^4.0.7",
@@ -20,6 +19,7 @@
     "marked": "^0.3.6",
     "moment": "^2.20.1",
     "nodemailer": "^4.4.1",
+    "rambda": "^1.0.9",
     "request": "^2.83.0",
     "steem": "^0.6.7",
     "truncate": "^2.0.0",
@@ -43,6 +43,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.8",
+    "directory-loader": "^1.0.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -62,7 +63,6 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "markdown-loader": "^2.0.2",
     "node-notifier": "^5.2.1",
     "offline-plugin": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -70,6 +70,7 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
